DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Attendee__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Lookup</type>
    <referenceTo>Demo_Event__c</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <relationshipLabel>Event</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>