DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Attendee__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <type>Text</type>
    <length>20</length>
</CustomField>