DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Attendee__c/fields/Ticket_Code__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Code__c</fullName>
    <label>Ticket Code</label>
    <type>Text</type>
    <length>64</length>
</CustomField>